--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>鎰呈行生管系統 v3.8 (Admin版-防崩潰修復)</title>
+    <title>鎰呈行生管系統 v3.9 (Admin版-功能修復)</title>
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -95,40 +95,23 @@
             Timestamp 
         } from 'firebase/firestore';
 
-        // --- 錯誤邊界元件 (防止白屏) ---
+        // --- 錯誤邊界元件 ---
         class ErrorBoundary extends React.Component {
             constructor(props) {
                 super(props);
                 this.state = { hasError: false, error: null };
             }
-
-            static getDerivedStateFromError(error) {
-                return { hasError: true, error };
-            }
-
-            componentDidCatch(error, errorInfo) {
-                console.error("Uncaught error:", error, errorInfo);
-            }
-
+            static getDerivedStateFromError(error) { return { hasError: true, error }; }
+            componentDidCatch(error, errorInfo) { console.error("Uncaught error:", error, errorInfo); }
             render() {
                 if (this.state.hasError) {
                     return (
                         <div className="min-h-screen flex flex-col items-center justify-center bg-red-50 p-8">
                             <div className="bg-white p-8 rounded-xl shadow-lg max-w-lg w-full border border-red-200">
-                                <h1 className="text-2xl font-bold text-red-600 mb-4 flex items-center gap-2">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><circle cx="12" cy="12" r="10"/><line x1="12" x2="12" y1="8" y2="12"/><line x1="12" x2="12.01" y1="16" y2="16"/></svg>
-                                    系統發生錯誤
-                                </h1>
-                                <p className="text-slate-600 mb-4">很抱歉，處理資料時發生了意外錯誤。這可能是因為 Excel 檔案格式異常或資料內容不符。</p>
-                                <div className="bg-slate-100 p-4 rounded text-xs text-red-500 font-mono overflow-auto max-h-40 mb-6">
-                                    {this.state.error && this.state.error.toString()}
-                                </div>
-                                <button 
-                                    onClick={() => window.location.reload()} 
-                                    className="w-full bg-blue-600 text-white px-4 py-3 rounded-lg hover:bg-blue-700 font-semibold transition-colors"
-                                >
-                                    重新整理頁面
-                                </button>
+                                <h1 className="text-2xl font-bold text-red-600 mb-4 flex items-center gap-2">系統發生錯誤</h1>
+                                <p className="text-slate-600 mb-4">很抱歉，程式執行時發生了意外錯誤。</p>
+                                <div className="bg-slate-100 p-4 rounded text-xs text-red-500 font-mono overflow-auto max-h-40 mb-6">{this.state.error && this.state.error.toString()}</div>
+                                <button onClick={() => window.location.reload()} className="w-full bg-blue-600 text-white px-4 py-3 rounded-lg hover:bg-blue-700 font-semibold transition-colors">重新整理頁面</button>
                             </div>
                         </div>
                     );
@@ -315,7 +298,6 @@
 
                         const jsonData = window.XLSX.utils.sheet_to_json(ws, { range: headerRowIndex });
                         
-                        // 資料清理：移除重複欄位與空資料
                         const processedJson = jsonData.map(row => {
                             const newRow = { ...row };
                             Object.keys(newRow).forEach(key => {
@@ -360,7 +342,6 @@
                         const batch = writeBatch(db);
                         chunk.forEach((row) => {
                             const cleanRow = {};
-                            // 安全地處理 Key
                             Object.keys(row).forEach(key => {
                                 if (key) cleanRow[key.trim()] = row[key];
                             });
@@ -385,6 +366,34 @@
                 } catch(e) { alert(e.message); } finally { setLoading(false); }
             };
 
+            // 修復：補回漏掉的 handleDeleteAll 函式
+            const handleDeleteAll = async () => {
+                if (!confirm("警告：確定要清空所有訂單資料嗎？此動作無法復原！")) return;
+                setLoading(true);
+                try {
+                    const q = query(collection(db, 'orders'));
+                    const snapshot = await getDocs(q);
+                    const batchSize = 400;
+                    const chunks = [];
+                    const docs = snapshot.docs;
+                    for (let i = 0; i < docs.length; i += batchSize) chunks.push(docs.slice(i, i + batchSize));
+                    for (const chunk of chunks) {
+                        const batch = writeBatch(db);
+                        chunk.forEach(doc => batch.delete(doc.ref));
+                        await batch.commit();
+                    }
+                    setDbData([]);
+                    setSelectedIds(new Set());
+                    setSuccessMsg(`已成功清空 ${docs.length} 筆資料！`);
+                    setTimeout(() => setSuccessMsg(null), 3000);
+                } catch (error) {
+                    console.error("Delete All error: ", error);
+                    alert("清空失敗：" + error.message);
+                } finally {
+                    setLoading(false);
+                }
+            };
+
             const handleDeleteSelected = async () => {
                 if (!confirm(`刪除 ${selectedIds.size} 筆？`)) return;
                 setLoading(true);
@@ -398,7 +407,6 @@
                 } catch(e) { alert(e.message); } finally { setLoading(false); }
             };
 
-            // 輔助函式：安全取得值 (修復：確保 obj 存在)
             const getValue = (obj, keyName) => {
                 if (!obj) return '';
                 const key = Object.keys(obj).find(k => k.trim() === keyName);
@@ -431,7 +439,6 @@
                 dbData.forEach(d => {
                     const qty = getQty(d);
                     totalUnfulfilled += qty;
-                    // 修正：使用交貨日期
                     const date = getValue(d, '交貨日期');
                     if (date && date < today && qty > 0) overdueCount++;
                     const client = getValue(d, '客戶名稱') || 'Unknown';
@@ -457,13 +464,11 @@
                 };
             }, [dbData]);
 
-            // 防崩潰：importHeaders
             const importHeaders = useMemo(() => {
                 if (!fileData || fileData.length === 0 || !fileData[0]) return [];
                 return Object.keys(fileData[0]);
             }, [fileData]);
 
-            // 防崩潰：allTableHeaders
             const allTableHeaders = useMemo(() => {
                 if (!dbData || dbData.length === 0) return [];
                 const keys = new Set();
@@ -631,7 +636,7 @@
                     <div className="min-h-screen bg-slate-50 flex flex-col">
                         {user && (
                             <header className="bg-white shadow-sm border-b sticky top-0 z-20 px-6 py-3 flex justify-between items-center">
-                                <div className="flex items-center gap-2 font-bold text-xl text-slate-800"><Icon name="Package" className="text-blue-600 w-6 h-6"/> 鎰呈行生管系統 v3.8</div>
+                                <div className="flex items-center gap-2 font-bold text-xl text-slate-800"><Icon name="Package" className="text-blue-600 w-6 h-6"/> 鎰呈行生管系統 v3.9</div>
                                 <button onClick={()=>signOut(auth)} className="text-slate-500 hover:text-red-600"><Icon name="LogOut" className="w-5 h-5"/></button>
                             </header>
                         )}
